Thu Jul 14 12:20:04 CEST 2011 (acab)
------------------------------------
 * clamav-milter/clamfi.c: fix typo in error message (bb#3040)

Thu Jul 14 12:07:04 CEST 2011 (acab)
------------------------------------
 * libclamav/lzma_iface.c: shut up huge alloc warns for 7z/lzma (bb#2913)

Sat Jun 18 17:44:42 CEST 2011 (acab)
------------------------------------
 * clamav-milter: add config option "SupportMultipleRecipients" (bb#2879)

Thu Jun  9 08:22:31 CEST 2011 (acab)
------------------------------------
 * libclamav/mew.c: harden boundary check on e8/e9 fixup

Wed Jun  8 14:57:40 CEST 2011 (acab)
------------------------------------
 * libclamav/nsis, libclamav/chmunpack.[ch], libclamav/scanners.c:
	don't remap in NSIS, CHM (bb#2838)

Thu May 26 14:17:52 CEST 2011 (acab)
------------------------------------
 * libclamav/matcher-hash.c: in hm_sort don't swap an item with itself (bb#2818)

Thu May 12 13:01:56 CEST 2011 (tk)
----------------------------------
 * freshclam/manager.c: fix return code of Rfc2822DateTime() (bb#2809)

Tue May 10 21:25:37 CEST 2011 (tk)
----------------------------------
 * sigtool: add support for building unsigned dbs (--unsigned)
 * libclamav: handle unsigned db files (.cud)

Sat May  7 18:05:23 EEST 2011 (edwin)
-------------------------------------
 * libclamav/pdf.c: better detection for encrypted PDFs (bb #2448)

Fri May  6 16:16:00 EEST 2011 (edwin)
------------------------------------
 * libclamav/c++: add support for building with external LLVM 2.9, and drop external 2.8 support

Thu May  5 01:07:57 CEST 2011 (acab)
------------------------------------
 * clamd: log request ip address for instream scans #bb2592

Wed May  4 14:07:12 EEST 2011 (edwin)
-------------------------------------
 * libclamav/c++/llvm/lib/Target/X86/X86InstrInfo.td: bb #2763
 don't assert on AVX chips (Intel Core i5 and i7)

Tue May  3 22:52:04 PDT 2011 (tk)
---------------------------------
 * sigtool: properly normalize html files (bb#2764)
